<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Menu"
    android:background="#65657a">


    <Button
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:text="@string/Cartell"
        android:id="@+id/btnCartell"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="mostraCartell" />

    <Button
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:text="@string/Alertes"
        android:id="@+id/btnAlertes"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="mostraAlertes" />

    <Button
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:text="@string/Temps"
        android:id="@+id/btnTemps"
        android:layout_below="@+id/btnCartell"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="43dp" />

    <Button
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:text="@string/Xat"
        android:id="@+id/btnXat"
        android:layout_alignTop="@+id/btnTemps"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:text="@string/Acts"
        android:id="@+id/btnActs"
        android:layout_below="@+id/btnTemps"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="43dp" />

    <Button
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:text="@string/Quiz"
        android:id="@+id/btnQuiz"
        android:layout_alignTop="@+id/btnActs"
        android:layout_alignLeft="@+id/btnXat"
        android:layout_alignStart="@+id/btnXat" />
</RelativeLayout>
